trying to fix horizontal scroll

--- a/static-assets/css/app.css
+++ b/static-assets/css/app.css
@@ -416,7 +416,8 @@ blockquote, blockquote p {
   display: inline-block;
 }
 .carousel-inner {
-  overflow: auto;
+  overflow-y: hidden;
+  overflow-x: auto;
 }
 .loading {
   color: white;
